--- a/Changelog.txt
+++ b/Changelog.txt
@@ -8,9 +8,10 @@
    • Use native ZipFile class instead of Ionic.Zip
    • Major code cleanup and refactoring
    • Remove TextArt
-   • Add transparent color to color panel
+   • Add transparent color option to color panel
    • About dialog and splash screen redesigned
    • Switch icons from Breeze to Tlell
+   • Remove the perpetually buggy tables feature
    • Add a new default theme - "Glacier"
 
 Version 9.2 (August 20, 2018)
